Change href in about

--- a/BeBlog/templates/info/about.html
+++ b/BeBlog/templates/info/about.html
@@ -16,7 +16,9 @@
                             reason for talk about something written in posts. Social element is understood and simple.
                             Have a nice day with BeBlog. See more project in my repo;)
                         </p>
-                        <div class="read_bt_1"><a href="#">Raed More</a></div>
+                        <div class="read_bt_1">
+                            <a href="https://github.com/TimurKarkoshin/Blog_With_Chat/blob/init_project/README.md">Raed More</a>
+                        </div>
                     </div>
                 </div>
             </div>
